# loco_car

./: .ftpconfig  .gitignore  .gitmodules  .remote-sync.json  LICENSE  README.md  license.txt  record.txt
LoCo_Simulation/: bicycle_drift_model.slx  bicycle_drift_model.slx.original  createAviMovieFromAnimationSequence.m  graphical_development.m  sanim_XY_vehicle_viz.m  setup.m  veh_object2.m  (+1 more)
actionlib_tutorials/: CMakeLists.txt  package.xml
actionlib_tutorials/src/: fibonacci_client.cpp  fibonacci_client2.cpp
ilqr_loco/: CMakeLists.txt  package.xml
ilqr_loco/action/: TrajExec.action
ilqr_loco/config/: 0mps_T150.yaml  0mps_T50.yaml  1mps_T150.yaml  1mps_T50.yaml  2mps_T150.yaml  2mps_T50.yaml  3mps_T100.yaml  3mps_T150.yaml  3mps_T50.yaml  aum_ilqr_params.yaml  config.yaml  ilqr_params.yaml  ilqr_params.yaml.save  ilqr_params_test.yaml  test.yaml  test_slow.yaml
ilqr_loco/control_seq/: 20Hz_0mps_T20.yaml  20Hz_0mps_T46.yaml  20Hz_1mps_T68.yaml  2mps_T2.yaml  3mps_1.yaml  3mps_2.yaml  3mps_3.yaml  3mps_4.yaml  U_1mps.txt  U_2mps.txt  U_3mps.txt  U_standstill.txt  aum1.yaml  aum2.yaml  aum3.yaml  aum4.yaml  drift5.yaml  generated.yaml  long_parallel_park.yaml  moose_2mps.yaml  most_recent_recording.yaml
ilqr_loco/control_seq/drift/: drift1.yaml  drift2.yaml  drift3.yaml  drift4.yaml
ilqr_loco/control_seq/new_ilqr_test/: 0mps_T100_steer.yaml  1mps_T100_steer.yaml  2mps_T100_steer.yaml  3mps_T100_new.yaml  3mps_T100_steer.yaml  3mps_T20_steer.yaml  3mps_T40_20hz_new.yaml
ilqr_loco/control_seq/old/: 0mps_T50.yaml  1mps_T150.yaml  1mps_T50.yaml  2mps_T50.yaml  3mps_T100.yaml  3mps_T20_20hz.yaml
ilqr_loco/include/: boxQP.h  iLQG.h  iLQG_mpc.h  iLQG_plan.h  iLQG_problem.h  iLQR_executer.h  iLQR_planner.h  ilqr_executer.h  ilqr_planner.h  ilqr_planner.h~  matMult.h  printMat.h  ramp_client.h  traj_client.h  traj_server.h  try_get_param.h
ilqr_loco/include/iLQG/: back_pass.h  cholesky.h  iLQG.h  iLQG_problem.h  line_search.h  matMult.h
ilqr_loco/launch/: aum_traj.launch  traj_action_client v2.launch  traj_action_client.launch  traj_action_client_v2.launch  v2_traj_action_client.launch
ilqr_loco/nodes/: control_recorder.py  init_creator.py
ilqr_loco/src/: COMPILE.txt  README.md  iLQG_mpc.c  iLQR_executer.cpp  iLQR_planner.cpp  ilqr_executer.cpp  ilqr_planner.cpp  line_search.c  msg_utils.cpp  printMat.c  ramp_client.cpp  test_client.cpp  traj_client.cpp  traj_client_detector.cpp  traj_client_ilqr.cpp  traj_client_msg_utils.cpp  traj_client_params.cpp  traj_client_ramp.cpp  traj_server.cpp
ilqr_loco/src/iLQG/: back_pass.c  boxQP.c  cholesky.c  iLQG.c  iLQG_func.c  iLQG_plan.c  line_search.c  matMult.c
ilqr_loco/src/old/: traj_client_old.cpp
kf_tracker/kf_tracker/: CMakeLists.txt  package.xml
kf_tracker/kf_tracker/src/: kf_tracker.cpp  naive_obstacle_detector.cpp
loco/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
loco/bag_files/: 2017-02-01-19-43-01.bag  2017-02-01-20-32-19.bag  2017-02-01-20-32-19.txt  2017-02-03-23-05-35.bag  2017-02-03-23-05-35.txt  only_ccs.bag
loco/bash/: b  clk  cmk  killros
loco/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
loco/catkin_generated/installspace/: loco.pc  locoConfig.cmake
loco/catkin_generated/stamps/loco/: package.xml.stamp
loco/config/: default.rviz  rviz_map.rviz  rviz_navigation.rviz  rviz_navigation_sbpl.rviz
loco/config/carlike/: teb_local_planner_params.yaml
loco/controlinputs/: controls.txt  generated.txt  recorded.txt
loco/launch/: amcl.launch  amcl_hallway.launch.save  amcl_sim.launch  amcl_sve.launch  gmapping.launch  hector_slam.launch  jetson_test.launch  jetson_test.launch~  loco.launch  loco_w_nav.launch  nav_global_planning.launch  nav_global_planning_test.launch  nav_local_planning.launch  odometry.launch  odometry_sim.launch  openloop_sve.launch  playback_traj.launch  record_20hz.launch  robot_tf.launch  rviz.launch  teleop.launch  test_amcl.launch
loco/launch/amcl/: amcl.launch  amcl_extended.launch  amcl_hallway.launch  amcl_sve.launch
loco/launch/core/: odometry.launch  record_teleop.launch  robot_tf.launch  rviz_nav.launch  teleop.launch
loco/launch/mapping/: gmapping.launch
loco/launch/old/: bag.launch  loco.launch  loco_extended.launch  loco_hallway.launch  old_openloop.launch  openloop.launch  record_manual.launch  test_amcl.launch
loco/maps/: extended.yaml  fve_map.yaml  hallway.pgm  lab.pgm  lab.yaml  sve.yaml  sve_old.yaml  sve_tracks.pgm  sve_tracks_obstacle.pgm  sve_uncropped.yaml
loco/nodes/: amcl_eval.py  amcl_score.py
loco/scripts/: open_loop_playback.py  record.txt  rosip  traj_gen.py  traj_recorder.py
loco/scripts/bash_scripts/: b  cmk  cmk~  rosip
loco/src/: amcl_echo.cpp  amcl_globalinit.cpp  cmd_vel_odom.cpp  dist2goal.cpp  playback_traj.cpp  record_traj.cpp
loco_msgs/: CMakeLists.txt  package.xml
loco_msgs/action/: TrajExec.action
loco_msgs/msg/: Trajectory.msg
maskor_navigation/sbpl_lattice_planner/: CMakeLists.txt  rover.mprim
maskor_navigation/sbpl_lattice_planner/launch/: costmap_common_params.yaml  local_costmap_params_close.yaml  move_base_sbpl.launch
obstacle_detection/publishpcl_nodelet/: CMakeLists.txt  nodelet_pcl.xml  package.xml  scan2cloud.launch
obstacle_detection/publishpcl_nodelet/launch/: scan2cloud.launch
obstacle_detection/publishpcl_nodelet/src/: nodelet_guide.cpp  scan2cloud.cpp
sbpl/sbpl/: CMakeLists.txt
sbpl/sbpl/matlab/mprim/: frames.gv  genmprim_unicycle.m  genmprim_unicycleplussidewaysplusbackturn.m  rover.mprim  testing_loco.mprim  testing_loco_sim.mprim  testing_loco_sim2.mprim
sbpl/sbpl/src/planners/: lazyARA.cpp
sbpl/sbpl_lattice_planner/: CMakeLists.txt  README.md  package.xml
sbpl/sbpl_lattice_planner/launch/: base_local_planner_params_close.yaml  costmap_common_params.yaml  global_costmap_params.yaml  sbpl_global_params.yaml
sbpl/sbpl_lattice_planner/src/: sbpl_lattice_planner.cpp
teleop_keyboard/: CMakeLists.txt  teleop_keyboard.py
utilities/keyboard_commmand/: CMakeLists.txt  keyboard_command.py  package.xml
(+506 files in other folders)
