<package>
  <name>publishpcl_nodelet</name>
  <version>0.1.0</version>
  <description>The publishpcl nodelet package</description>
  <maintainer email="aum.jadhav@gmail.com">Aum Jadhav</maintainer>
  <author>Aum Jadhav</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_pcl.xml"/>
  </export>
</package>
